# ResearchTikPy

./: .pypirc.txt  README.md  pyproject.toml  requirements.txt  setup.py  setup.py.ipynb  setup_backup.ipynb
.ipynb_checkpoints/: setup-checkpoint.py  setup.py-checkpoint.ipynb
ResearchTikPy.egg-info/: PKG-INFO  SOURCES.txt
researchtikpy/: __init__.py  endpoints.py  get_access_token.py  get_followers.py  get_followers_multiple_users.ipynb  get_following.py  get_following_multiple_users.ipynb  get_following_users.ipynb  get_liked_videos.py  get_pinned_videos.ipynb  get_query.py  get_token.ipynb  get_token.py  get_users_info.ipynb  get_users_info.py  get_video_comments.ipynb  get_video_comments.py  get_videos_hashtag.py  get_videos_info.ipynb  get_videos_info.py  query_lang.py  rtk_utilities.py  shops.py  social_graph.py  utils.py
researchtikpy/.ipynb_checkpoints/: __init__-checkpoint.ipynb  __init__.py-checkpoint.ipynb  get_followers_multiple_users-checkpoint.ipynb  get_liked_videos-checkpoint.ipynb  get_pinned_videos-checkpoint.ipynb  get_token-checkpoint.ipynb  get_users_info-checkpoint.ipynb  get_videos_hashtag-checkpoint.ipynb  (+1 more)
test_env/: pyvenv.cfg
tests/: helpers.py  test_get_access_token.py  test_get_followers.py  test_get_followers_notworkingyet (2).py  test_get_followers_notworkingyet (3).py  test_get_followers_notworkingyet (7).py  test_get_followers_notworkingyet (8).py  test_get_following.py  test_get_liked_videos.py  test_get_token.ipynb  test_get_user_info.py  test_get_videos_hashtags.py  test_get_videos_query.py  test_query_lang.py  test_shops.py
(+14 files in other folders)
